--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -19,116 +19,114 @@
 
 
   <div class="row">
+    <div class="col-lg-12 beatschBlock">
 
-    <div class="col-lg-6">
+      <div class="col-lg-6">
+        <!--<div class="col-lg-6">-->
 
-      <div id="videoPlayer">
-        <youtube-video player-width="'550'" player-height="'320'" video-id="currentSong._song.videoId" player-vars="playerVars"></youtube-video>
-      </div>
-
-      <!--
-      <div class="beatschBlock" id="currentlyPlaying">
-        <h1 class="page-header">Currently Playing</h1>
-        <div>
-          <a href="#" tooltip="{{ currentSong._song.title }}">{{ currentSong.position}}: {{ currentSong._song.artist }} - {{ currentSong._song.title }} Current Votes: {{ currentSong.votes }}, Total Votes: {{ currentSong._song.votes }}, Played: {{ currentSong.played }}</a>
+        <div id="videoPlayer">
+          <youtube-video player-width="'550'" player-height="'400'" video-id="currentSong._song.videoId" player-vars="playerVars"></youtube-video>
         </div>
-      </div>
-      -->
 
-
-
-    </div>
-
-    <div class="col-lg-6">
-
-      <div class="row">
-        <div id="addVideoForm">
-          <form class="thing-form" >
-            <p class="input-group">
-
-              <input type="text" ng-model="newSong" placeholder="Add a new song from Youtube here." typeahead="video as video.snippet.title for video in searchYoutube($viewValue) | filter: $viewValue" typeahead-loading="loadingLocations" typeahead-wait-ms="0" class="form-control">
-
-              <i ng-show="loadingLocations" class="glyphicon glyphicon-refresh"></i>
-
-        <span class="input-group-btn">
-          <button type="submit" class="btn btn-primary" ng-click="addSong()">Add New</button>
-        </span>
-            </p>
-          </form>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="beatschBlock" id="playList">
-          <h1 class="page-header">Voting Queue</h1>
-
+        <!--
+        <div class="beatschBlock" id="currentlyPlaying">
+          <h1 class="page-header">Currently Playing</h1>
           <div>
-            {{ timer }}
+            <a href="#" tooltip="{{ currentSong._song.title }}">{{ currentSong.position}}: {{ currentSong._song.artist }} - {{ currentSong._song.title }} Current Votes: {{ currentSong.votes }}, Total Votes: {{ currentSong._song.votes }}, Played: {{ currentSong.played }}</a>
+          </div>
+        </div>
+        -->
+
+
+
+      </div>
+
+      <div class="col-lg-6">
+        <!--<div class="col-lg-6">-->
+
+        <div class="beatschBlock" id="playList">
+          <h1 class="page-header">VOTING QuEuE <span id="beatschTimer">{{ timer }}</span></h1>
+
+          <div id="addVideoForm">
+            <form class="thing-form" >
+              <p class="input-group">
+
+                <input type="text" ng-model="newSong" placeholder="Add a new song from Youtube here." typeahead="video as video.snippet.title for video in searchYoutube($viewValue) | filter: $viewValue" typeahead-loading="loadingLocations" typeahead-wait-ms="0" class="form-control">
+
+                <i ng-show="loadingLocations" class="glyphicon glyphicon-refresh"></i>
+
+                <span class="input-group-btn">
+                  <button type="submit" class="btn btn-primary" ng-click="addSong()">Add New</button>
+                </span>
+              </p>
+            </form>
           </div>
 
           <div>
-            <ul class="beatschBlock nav nav-tabs nav-stacked col-md-12 col-lg-12 col-sm-12">
+            <ul class="beatschBlock nav nav-tabs nav-stacked">
               <li ng-repeat="track in playList | orderBy: '-votes.length'"><a href="#" tooltip="{{ track._song.title }}" ng-click="voteFor(track._song)">{{ track._song.artist }} - {{ track._song.title }} Current Votes: {{ track.votes.length }}, Total votes: {{ track._song.votes.length }}</a></li>
             </ul>
           </div>
+
         </div>
+
       </div>
-
     </div>
+  </div>
 
-    <div class="row">
-      <div class="col-lg-12 beatschBlock" id="playLog">
-        <h1 class="page-header">Playlist</h1>
-        <ul class=" beatschBlock nav nav-tabs nav-stacked col-md-12 col-lg-12 col-sm-12">
-          <li ng-repeat="track in playLog | orderBy: 'date'"><a href="#" tooltip="{{ track._song.title }}">{{ track.date }}: {{ track._song.artist }} - {{ track._song.title }} Current Votes: {{ track.votes.length }}, Total Votes: {{ track._song.votes.length }}</a></li>
+  <div class="row">
+    <div class="col-lg-12 beatschBlock" id="playLog">
+      <h1 class="page-header">PLAYLIST</h1>
+      <ul class=" beatschBlock nav nav-tabs nav-stacked col-md-12 col-lg-12 col-sm-12">
+        <li ng-repeat="track in playLog | orderBy: 'date'"><a href="#" tooltip="{{ track._song.title }}">{{ track.date }}: {{ track._song.artist }} - {{ track._song.title }} Current Votes: {{ track.votes.length }}, Total Votes: {{ track._song.votes.length }}</a></li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-lg-12 beatschBlock" id="songCatalog">
+      <h1 class="page-header">SONG CATALOG</h1>
+      <div infinite-scroll='songList.loadMore()' infinite-scroll-distance='1'>
+        <ul class="nav nav-tabs nav-stacked col-md-12 col-lg-12 col-sm-12">
+          <li ng-repeat="song in catalog | orderBy: '-votes.length'"><a href="#" tooltip="{{song.title}}" ng-click="voteFor(song)">{{ song.artist }} - {{ song.title }}, Votes: {{ song.votes.length }}</a></li>
         </ul>
       </div>
     </div>
+  </div>
 
-    <div class="row">
-      <div class="col-lg-12 beatschBlock" id="songCatalog">
-        <h1 class="page-header">Song Catalog</h1>
-        <div infinite-scroll='songList.loadMore()' infinite-scroll-distance='1'>
-          <ul class="nav nav-tabs nav-stacked col-md-12 col-lg-12 col-sm-12">
-            <li ng-repeat="song in catalog | orderBy: '-votes.length'"><a href="#" tooltip="{{song.title}}" ng-click="voteFor(song)">{{ song.artist }} - {{ song.title }}, Votes: {{ song.votes.length }}</a></li>
+</div>
+
+<footer class="footer navbar-fixed-bottom">
+  <div class="container">
+    <div class="beatschBlock" id="chatBlock">
+      <button class="btn btn-primary" ng-click="isCollapsed = !isCollapsed">Chat</button>
+      <div collapse="isCollapsed">
+        <div>
+          <h1 class="page-header">CHATS:</h1>
+          <ul class="nav nav-tabs nav-stacked">
+            <li ng-repeat="chat in chats"><a href="#" tooltip="{{chat.date}}">{{chat.body}}</a></li>
           </ul>
+        </div>
+        <div>
+          <form class="chat-form">
+            <label>Chat</label>
+            <p class="input-group">
+              <input type="text" class="form-control" placeholder="Chat here" ng-model="newChat">
+                <span class="input-group-btn">
+                  <button type="submit" class="btn btn-primary" ng-click="addChat()">Submit</button>
+                </span>
+            </p>
+          </form>
         </div>
       </div>
     </div>
 
   </div>
 
-  <footer class="footer navbar-fixed-bottom">
-    <div class="container">
-      <div class="beatschBlock" id="chatBlock">
-        <button class="btn btn-primary" ng-click="isCollapsed = !isCollapsed">Chat</button>
-        <div collapse="isCollapsed">
-          <div>
-            <h1 class="page-header">Chats:</h1>
-            <ul class="nav nav-tabs nav-stacked">
-              <li ng-repeat="chat in chats"><a href="#" tooltip="{{chat.date}}">{{chat.body}}</a></li>
-            </ul>
-          </div>
-          <div>
-            <form class="chat-form">
-              <label>Chat</label>
-              <p class="input-group">
-                <input type="text" class="form-control" placeholder="Chat here" ng-model="newChat">
-                <span class="input-group-btn">
-                  <button type="submit" class="btn btn-primary" ng-click="addChat()">Submit</button>
-                </span>
-              </p>
-            </form>
-          </div>
-        </div>
-      </div>
-
-    </div>
-
-    <!--
-    <p>Angular Fullstack v2.0.13 |
-      <a href="https://twitter.com/tyhenkel">@tyhenkel</a> |
-       <a href="https://github.com/DaftMonk/generator-angular-fullstack/issues?state=open">Issues</a></p>
-    -->
-</div>
+  <!--
+  <p>Angular Fullstack v2.0.13 |
+    <a href="https://twitter.com/tyhenkel">@tyhenkel</a> |
+     <a href="https://github.com/DaftMonk/generator-angular-fullstack/issues?state=open">Issues</a></p>
+  -->
+  </div>
 </footer>
