--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -64,7 +64,7 @@
 
           <div>
             <ul class="beatschBlock nav nav-tabs nav-stacked">
-              <li ng-repeat="track in playList | orderBy: '-votes.length'"><a href="#" tooltip="{{ track._song.title }}" ng-click="voteFor(track._song)">{{ track._song.artist }} - {{ track._song.title }} Current Votes: {{ track.votes.length }}, Total votes: {{ track._song.votes.length }}</a></li>
+              <li ng-repeat="track in playList | orderBy: '-votes.length'"><a href="#" tooltip="{{ track._song.title }}" ng-click="voteFor(track._song)">{{ track._song.title }} Current Votes: {{ track.votes.length }}, Total votes: {{ track._song.votes.length }}</a></li>
             </ul>
           </div>
 
@@ -88,7 +88,7 @@
       <h1 class="page-header">SONG CATALOG</h1>
       <div infinite-scroll='songList.loadMore()' infinite-scroll-distance='1'>
         <ul class="nav nav-tabs nav-stacked col-md-12 col-lg-12 col-sm-12">
-          <li ng-repeat="song in catalog | orderBy: '-votes.length'"><a href="#" tooltip="{{song.title}}" ng-click="voteFor(song)">{{ song.artist }} - {{ song.title }}, Votes: {{ song.votes.length }}</a></li>
+          <li ng-repeat="song in catalog | orderBy: '-votes.length'"><a href="#" tooltip="{{song.title}}" ng-click="voteFor(song)">{{ song.title }}, Votes: {{ song.votes.length }}</a></li>
         </ul>
       </div>
     </div>
