The playlog now removes the most recently played song after it is done playing.

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -46,7 +46,7 @@
     </div>
   </div>
 
-  <div class="row">
+  <div class="row beatschBlock">
     <div class="col-lg-12 beatschBlock" id="playLog">
       <h1 class="page-header">PLAYLIST</h1>
       <ul class=" beatschBlock nav nav-tabs nav-stacked col-md-12 col-lg-12 col-sm-12">
@@ -55,7 +55,7 @@
     </div>
   </div>
 
-  <div class="row">
+  <div class="row beatschBlock">
     <div class="col-lg-12 beatschBlock" id="songCatalog">
       <h1 class="page-header">SONG CATALOG</h1>
       <div infinite-scroll='songList.loadMore()' infinite-scroll-distance='1'>
