Voting is now limited to only once every 5 seconds.  The voting mechanism will change in the future.

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -17,7 +17,7 @@
       <div class="col-lg-6">
 
         <div class="beatschBlock" id="playList">
-          <h1 class="page-header">VOTING QuEuE <span id="beatschTimer">{{ timer }}</span></h1>
+          <h1 class="page-header">REMAINING TIME TO VOTE<span id="beatschTimer">{{ timer }}</span></h1>
 
           <div id="addVideoForm">
             <form class="thing-form" >
