-Limited "Now Playing" to 50 characters -Lowered initial playlist size to 2 -Added functionality to restrict adding videos from youtube to only users who are logged in.  Currently disabled, but it is commented out in main.html.

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -19,6 +19,7 @@
         <div class="beatschBlock" id="playList">
           <h1 class="page-header">REMAINING TIME TO VOTE<span id="beatschTimer">{{ timer }}</span></h1>
 
+          <!--<div id="addVideoForm" ng-hide="!isLoggedIn()">-->
           <div id="addVideoForm">
             <form class="thing-form" >
               <p class="input-group">
