--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,5 +1,6 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
 
+<!--
 <header class="hero-unit" id="banner">
   <div class="container">
     <h1>'Allo, 'Allo!</h1>
@@ -7,8 +8,19 @@
     <img src="assets/images/yeoman.png" alt="I'm Yeoman">
   </div>
 </header>
+-->
 
 <div class="container">
+
+  <div class="row">
+    <div class="col-lg-12">
+      <h1 class="page-header">Songs:</h1>
+      <div ng-repeat="video in videos">
+        <a href="#" tooltip="{{video.title}}">{{video.title}}</a>
+      </div>
+    </div>
+  </div>
+
   <div class="row">
     <div class="col-lg-12">
       <h1 class="page-header">Features:</h1>
