--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -14,12 +14,32 @@
 
   <div class="row">
     <div class="col-lg-12">
+
+      <div id="addVideoForm">
+        <form class="thing-form" >
+          <p class="input-group">
+
+            <input type="text" ng-model="newSong" placeholder="Add a new song from Youtube here." typeahead="video as video.snippet.title for video in searchYoutube($viewValue) | filter: $viewValue" typeahead-loading="loadingLocations" typeahead-wait-ms="5" class="form-control">
+
+            <!--<i ng-show="loadingLocations" class="glyphicon glyphicon-refresh"></i>-->
+
+                <span class="input-group-btn">
+                  <button type="submit" class="btn btn-default" ng-click="addSong()">Add New</button>
+                </span>
+          </p>
+        </form>
+      </div>
+
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-lg-12">
       <h1 class="page-header">Songs:</h1>
-      <div ng-repeat="video in videos | orderBy : '-score'">
+      <div ng-repeat="video in videos | orderBy : '-score'" ng-animate="{enter: 'example-repeat-enter', leave: 'example-repeat-leave', move: 'example-repeat-move'}">
         <div ng-click="voteFor(video)"><b>{{ video.title }}</b></div>
         <div>Score: {{ video.score }}</div>
         <div>Votes: {{ video.votes.length }}</div>
-      </div>
       </div>
     </div>
   </div>
@@ -46,8 +66,8 @@
 
 <footer class="footer">
   <div class="container">
-      <p>Angular Fullstack v2.0.13 |
-        <a href="https://twitter.com/tyhenkel">@tyhenkel</a> |
-         <a href="https://github.com/DaftMonk/generator-angular-fullstack/issues?state=open">Issues</a></p>
+    <p>Angular Fullstack v2.0.13 |
+      <a href="https://twitter.com/tyhenkel">@tyhenkel</a> |
+      <a href="https://github.com/DaftMonk/generator-angular-fullstack/issues?state=open">Issues</a></p>
   </div>
 </footer>
