--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -13,6 +13,100 @@
 <div class="container">
 
   <div class="row">
+    <div class="col-12">
+      <h2>Video player</h2>
+
+      <div class="videogular-container">
+        <!--<videogular vg-player-ready="onPlayerReady" vg-theme="config.theme.url" vg-autoplay="config.autoPlay">
+          <vg-video vg-src="config.sources" vg-youtube="rel=1;showinfo=1"></vg-video>
+
+          <vg-controls vg-autohide="config.autoHide" vg-autohide-time="config.autoHideTime">
+            <vg-play-pause-button></vg-play-pause-button>
+            <vg-timedisplay>{{ currentTime | date:'mm:ss' }}</vg-timedisplay>
+            <vg-scrubBar>
+              <vg-scrubbarcurrenttime></vg-scrubbarcurrenttime>
+            </vg-scrubBar>
+            <vg-timedisplay>{{ timeLeft | date:'mm:ss' }}</vg-timedisplay>
+            <vg-volume>
+              <vg-mutebutton></vg-mutebutton>
+              <vg-volumebar></vg-volumebar>
+            </vg-volume>
+            <vg-fullscreenButton></vg-fullscreenButton>
+          </vg-controls>
+
+          <vg-poster-image vg-url='config.plugins.poster.url'></vg-poster-image>
+          <vg-buffering></vg-buffering>
+          <vg-overlay-play vg-play-icon="config.theme.playIcon"></vg-overlay-play>
+
+          <vg-poster-image vg-url='config.plugins.poster.url'></vg-poster-image>
+          <vg-buffering></vg-buffering>
+          <vg-overlay-play vg-play-icon="config.theme.playIcon"></vg-overlay-play>
+        </videogular>-->
+
+        <videogular vg-theme="config.theme.url">
+          <vg-media vg-src="config.sources"
+                    vg-tracks="config.tracks"
+                    vg-native-controls="true"
+                    vg-youtube="rel=1;showinfo=1">
+          </vg-media>
+        </videogular>
+
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-12">
+      <h2>Video player properties</h2>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-6 col-sm-4 col-lg-4">
+      <div>
+        <label for="posterInput">Poster url image (png/jpg/gif):</label>
+        <input id="posterInput" type="text" class="form-control" ng-model="config.plugins.poster.url">
+      </div>
+    </div>
+
+    <div class="col-6 col-sm-4 col-lg-4">
+      <div>
+        <label class="checkbox">
+          <input id="autoPlayInput" type="checkbox" ng-model="config.autoPlay">Autoplay
+        </label>
+      </div>
+      <div>
+        <label class="checkbox">
+          <input id="autoHideInput" type="checkbox" ng-model="config.autoHide">Autohide
+        </label>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-6 col-sm-4 col-lg-4">
+      <div>Theme: {{config.theme.url}}</div>
+      <div>Poster image: {{config.plugins.poster.url}}</div>
+      <div>AutoPlay: {{config.autoPlay}}</div>
+    </div>
+    <div class="col-6 col-sm-4 col-lg-4">
+      <div>AutoHide: {{config.autoHide}}</div>
+      <div>Responsive: {{config.responsive}}</div>
+      <div>State: {{state}}</div>
+      <div>Time: {{currentTime}} / {{totalTime || 0}}</div>
+      <div>Volume: {{volume}}</div>
+      <div>Completed: {{isCompleted}}</div>
+    </div>
+    <div class="col-6 col-sm-4 col-lg-4">
+      <button ng-click="API.play()">Play</button>
+      <button ng-click="API.pause()">Pause</button>
+      <button ng-click="API.stop()">Stop</button>
+      <button ng-click="API.seekTime(30, false)">Move to second 30</button>
+      <button ng-click="API.seekTime(50, true)">Move to 50%</button>
+    </div>
+  </div>
+
+  <div class="row">
     <div class="col-lg-12">
 
       <div id="addVideoForm">
@@ -38,6 +132,7 @@
       <h1 class="page-header">Songs:</h1>
       <div ng-repeat="video in videos | orderBy : '-score'" ng-animate="{enter: 'example-repeat-enter', leave: 'example-repeat-leave', move: 'example-repeat-move'}">
         <div ng-click="voteFor(video)"><b>{{ video.title }}</b></div>
+        <div>Id: {{ video.videoId }}</div>
         <div>Score: {{ video.score }}</div>
         <div>Votes: {{ video.votes.length }}</div>
       </div>
