--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -43,12 +43,12 @@
           <vg-overlay-play vg-play-icon="config.theme.playIcon"></vg-overlay-play>
         </videogular>-->
 
-        <videogular vg-player-ready="onPlayerReady" vg-theme="config.theme.url" vg-autoplay="config.autoPlay">
+        <videogular vg-player-ready="onPlayerReady($API)" vg-theme="config.theme.url" vg-autoplay="config.autoPlay" vg-complete="onCompleteVideo()">
 
           <vg-media vg-src="config.sources"
                     vg-tracks="config.tracks"
-                    vg-native-controls="false"
-                    vg-youtube="rel=1;showinfo=1">
+                    vg-native-controls="true"
+                    vg-youtube="rel=1;showinfo=1;controls=0">
           </vg-media>
 
           <vg-controls>
@@ -76,7 +76,6 @@
     </div>
   </div>
 
-  <!--
   <div class="row">
     <div class="col-12">
       <h2>Video player properties</h2>
@@ -127,7 +126,6 @@
       <button ng-click="API.seekTime(50, true)">Move to 50%</button>
     </div>
   </div>
-  -->
 
   <div class="row">
     <div class="col-lg-12">
