--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -14,7 +14,7 @@
 
   <div class="row">
     <div class="col-12">
-      <h2>Video player</h2>
+      <!--<h2>Video player</h2>-->
 
       <div class="videogular-container">
         <!--<videogular vg-player-ready="onPlayerReady" vg-theme="config.theme.url" vg-autoplay="config.autoPlay">
@@ -76,6 +76,7 @@
     </div>
   </div>
 
+  <!--
   <div class="row">
     <div class="col-12">
       <h2>Video player properties</h2>
@@ -126,6 +127,7 @@
       <button ng-click="API.seekTime(50, true)">Move to 50%</button>
     </div>
   </div>
+  -->
 
   <div class="row">
     <div class="col-lg-12">
@@ -152,7 +154,7 @@
     <div class="col-lg-12">
       <h1 class="page-header">Songs:</h1>
       <div ng-repeat="video in videos | orderBy : '-score'" ng-animate="{enter: 'example-repeat-enter', leave: 'example-repeat-leave', move: 'example-repeat-move'}">
-        <div ng-click="voteFor(video)"><b>{{ video.title }}</b></div>
+        <div ng-click="voteFor(video)"><b>{{ $index }}: {{ video.title }}</b></div>
         <div>Id: {{ video.videoId }}</div>
         <div>Score: {{ video.score }}</div>
         <div>Votes: {{ video.votes.length }}</div>
