--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -160,22 +160,20 @@
     <div class="col-lg-12">
       <h1 class="page-header">Playlist:</h1>
       <div ng-repeat="video in videos | orderBy : '-score'" ng-animate="{enter: 'example-repeat-enter', leave: 'example-repeat-leave', move: 'example-repeat-move'}">
-        <div class="playList" ng-click="voteFor(video)">
+        <div class="playList">
           <b>{{ $index }}: {{ video.title }}</b>
           Score: {{ video.score }}
           Votes: {{ video.votes.length }}
-          <button class="btn btn-default" type="submit">Vote</button>
+          <button class="btn btn-default rubberBand" ng-click="voteFor(video)">Vote ❤</button>
         </div>
       </div>
     </div>
   </div>
 
+  <!--
 <footer class="footer">
   <div class="container">
-    <!--
-    <p>Angular Fullstack v2.0.13 |
-      <a href="https://twitter.com/tyhenkel">@tyhenkel</a> |
-      <a href="https://github.com/DaftMonk/generator-angular-fullstack/issues?state=open">Issues</a></p>
-    -->
+    <p></p>
   </div>
 </footer>
+-->
