--- a/client/index.html
+++ b/client/index.html
@@ -47,121 +47,78 @@
 </head>
 <body>
 
-  <!-- Primary Page Layout
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+<!-- Primary Page Layout
+–––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
-  <div class="section hero">
-    <div class="container">
-      <div class="row">
-        <div class="one-half column">
-          <h4 class="hero-heading">Mithril</h4>
-          <p class="section-description">
+<div class="section hero">
+  <div class="container">
+    <div class="row">
+      <div class="one-half column">
+        <h4 class="hero-heading">Mithril</h4>
+        <p class="section-description">
           <a href="http://lhorie.github.io/mithril/">Mithril</a>
           is a client-side MVC framework - a tool to organize code in a way that is easy to think about and to maintain.
-          </p>
+        </p>
 
+      </div>
+      <div class="one-half column phones">
+
+        <!-- mitrhil app -->
+        <div id="page-app" class="col-md-8 text">
         </div>
-        <div class="one-half column phones">
 
-          <!-- mitrhil app -->
-          <div id="page-app" class="col-md-8 text">
-          </div>
-
-        </div>
       </div>
     </div>
   </div>
+</div>
 
-  <div class="section categories">
-    <div class="container">
-      <h3 class="section-heading">CSS Skeleton</h3>
-      <img class="u-max-full-width" src="app/assets/images/skeleton.png">
+<div class="section categories">
+  <div class="container">
+    <h3 class="section-heading">CSS Skeleton</h3>
+    <img class="u-max-full-width" src="app/assets/images/skeleton.png">
 
-      <p class="section-description">Skeleton is a simple, responsive boilerplate to kickstart any responsive project.</p>
-      <a class="button button-primary" href="http://getskeleton.com">View Skeleton Docs</a>
-    </div>
+    <p class="section-description">Skeleton is a simple, responsive boilerplate to kickstart any responsive project.</p>
+    <a class="button button-primary" href="http://getskeleton.com">View Skeleton Docs</a>
   </div>
+</div>
 
-
-  <div class="section categories">
-    <div class="container">
-      <h3 class="section-heading">Gulp</h3>
-      <img class="u-max-full-width" src="app/assets/images/gulp.png">
-
-      <p class="section-description">Speed. Efficiency. Simplicity. Gulp's use of streams and code-over-configuration makes for a simpler and more intuitive build.</p>
-      <a class="button button-primary" href="http://gulpjs.com/">View Gulp Docs</a>
-    </div>
-  </div>
-
-  <div class="section categories">
-    <div class="container">
-      <h3 class="section-heading">jQuery</h3>
-      <img class="u-max-full-width" src="app/assets/images/jquery.png">
-
-      <p class="section-description">The Write Less, Do More, JavaScript Library.</p>
-      <a class="button button-primary" href="http://jquery.com/">View jQuery Docs</a>
-    </div>
-  </div>
-
-  <div class="section categories">
-    <div class="container">
-      <h3 class="section-heading">Browserify</h3>
-      <img class="u-max-full-width" src="app/assets/images/browserify.png">
-
-      <p class="section-description">Browserify lets you require('modules') in the browser by bundling up all of your dependencies.</p>
-      <a class="button button-primary" href="http://browserify.org/">View browserify Docs</a>
-    </div>
-  </div>
-
-
-
-
-  <div class="section categories">
-    <div class="container">
-      <h3 class="section-heading">Less</h3>
-      <img class="u-max-full-width" src="app/assets/images/less.png">
-
-      <p class="section-description">Less is a CSS pre-processor, which allows you to make CSS that is more maintainable, themable and extendable.</p>
-      <a class="button button-primary" href="http://lesscss.org/">View Sass Docs</a>
-    </div>
-  </div>
 
 
 <div class="footer">
-          <p>♥ from Steven Iseki and the Yeoman team</p>
+  <p>Beatsch</p>
 </div>
 
 
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-  <!--
-  <script>
-      (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-      function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-      e.src='//www.google-analytics.com/analytics.js';
-      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-      ga('create','UA-XXXXX-X');ga('send','pageview');
-    </script>
+<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+<!--
+<script>
+    (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+    function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+    e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+    e.src='//www.google-analytics.com/analytics.js';
+    r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+    ga('create','UA-XXXXX-X');ga('send','pageview');
+  </script>
 -->
-  <!-- Scripts
+<!-- Scripts
 
-  <!-- build:js({client_old,node_modules}) app/vendor.js -->
-  <!-- bower:js -->
-  <script src="bower_components/jquery/dist/jquery.js"></script>
-  <script src="bower_components/mithril/mithril.min.js"></script>
-  <!-- endbower -->
-  <!-- endbuild -->
+<!-- build:js({client_old,node_modules}) app/vendor.js -->
+<!-- bower:js -->
+<script src="bower_components/jquery/dist/jquery.js"></script>
+<script src="bower_components/mithril/mithril.min.js"></script>
+<!-- endbower -->
+<!-- endbuild -->
 
-  <script src="app/browserify/main.js"></script>
+<script src="browserify/main.js"></script>
 
-  <!--
-    <script src="scripts/jquery.js"></script>
-    <script src="scripts/mithril.min.js"></script>
-    <script src="scripts/browserify/main.js"></script>
-  -->
+<!--
+  <script src="scripts/jquery.js"></script>
+  <script src="scripts/mithril.min.js"></script>
+  <script src="scripts/browserify/main.js"></script>
+-->
 </body>
 </html>
 
