Added video list sort by score.

--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Skeleton: Responsive CSS Boilerplate</title>
+  <title>Beatsch</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -54,10 +54,10 @@
   <div class="container">
     <div class="row">
       <div class="one-half column">
-        <h4 class="hero-heading">Mithril</h4>
+        <h4 class="hero-heading">Beatsch</h4>
         <p class="section-description">
-          <a href="http://lhorie.github.io/mithril/">Mithril</a>
-          is a client-side MVC framework - a tool to organize code in a way that is easy to think about and to maintain.
+          <a href="http://www.beatsch.com">Beatsch</a>
+          is a democratic music player.
         </p>
 
       </div>
@@ -72,6 +72,7 @@
   </div>
 </div>
 
+<!--
 <div class="section categories">
   <div class="container">
     <h3 class="section-heading">CSS Skeleton</h3>
@@ -81,7 +82,7 @@
     <a class="button button-primary" href="http://getskeleton.com">View Skeleton Docs</a>
   </div>
 </div>
-
+-->
 
 
 <div class="footer">
