Basic next-song implemented.

--- a/client/index.html
+++ b/client/index.html
@@ -39,6 +39,14 @@
 
 <!-- Primary Page Layout –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 
+<div class="section categories">
+  <div class="container">
+    <h3 class="section-heading">Video</h3>
+    <video id='vid1' src='' class='video-js vjs-default-skin' muted='muted' autoplay='autoplay' controls preload='auto' width='640' height='360'>
+    </video>
+  </div>
+</div>
+
 <div class="section hero">
   <div class="container">
     <div class="row">
@@ -59,18 +67,6 @@
     </div>
   </div>
 </div>
-
-<!--
-<div class="section categories">
-  <div class="container">
-    <h3 class="section-heading">CSS Skeleton</h3>
-    <img class="u-max-full-width" src="app/assets/images/skeleton.png">
-
-    <p class="section-description">Skeleton is a simple, responsive boilerplate to kickstart any responsive project.</p>
-    <a class="button button-primary" href="http://getskeleton.com">View Skeleton Docs</a>
-  </div>
-</div>
--->
 
 <div class="footer">
   <p>Beatsch</p>
