--- a/client/index.html
+++ b/client/index.html
@@ -16,12 +16,12 @@
   <link href='//fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet' type='text/css'>
 
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-  <!-- build:css(client_old) app/vendor.css -->
+  <!-- build:css(client) app/vendor.css -->
   <!-- bower:css -->
   <link rel="stylesheet" href="bower_components/video.js/dist/video-js/video-js.css" />
   <!-- endbower -->
   <!-- endbuild -->
-  <!-- build:css({.tmp,client_old}) app/app.css -->
+  <!-- build:css({.tmp,client}) app/app.css -->
   <!-- injector:css -->
   <link rel="stylesheet" href="app/assets/styles/main.css">
   <link rel="stylesheet" href="app/assets/styles/normalize.css">
@@ -87,7 +87,7 @@
 -->
 <!-- Scripts
 
-<!-- build:js({client_old,node_modules}) app/vendor.js -->
+<!-- build:js({client,node_modules}) app/vendor.js -->
 <!-- bower:js -->
 <script src="bower_components/jquery/dist/jquery.js"></script>
 <script src="bower_components/mithril/mithril.min.js"></script>
@@ -98,11 +98,6 @@
 
 <script src="browserify/main.js"></script>
 
-<!--
-  <script src="scripts/jquery.js"></script>
-  <script src="scripts/mithril.min.js"></script>
-  <script src="scripts/browserify/main.js"></script>
--->
 </body>
 </html>
 
