--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
 
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
+    <link rel="stylesheet" href="/bower_components/video.js/dist/video-js/video-js.css" />
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -44,6 +45,8 @@
     <!-- bower:js -->
     <script src="/bower_components/jquery/dist/jquery.js"></script>
     <script src="/bower_components/mithril/mithril.min.js"></script>
+    <script src="/bower_components/video.js/dist/video-js/video.js"></script>
+    <script src="/bower_components/videojs-youtube/dist/vjs.youtube.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
