--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,6 @@
 
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
-    <link rel="stylesheet" href="/bower_components/video.js/dist/video-js/video-js.css" />
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -29,7 +28,7 @@
     <![endif]-->
 
     <!-- mitrhil app -->
-    <div id="beatsch-app"></div>
+    <div id="cloudslicer-app"></div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
@@ -45,8 +44,7 @@
     <!-- bower:js -->
     <script src="/bower_components/jquery/dist/jquery.js"></script>
     <script src="/bower_components/mithril/mithril.min.js"></script>
-    <script src="/bower_components/video.js/dist/video-js/video.js"></script>
-    <script src="/bower_components/videojs-youtube/dist/vjs.youtube.js"></script>
+    <script src="/bower_components/lodash/lodash.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
