CodeMirror integrated into the source editing side.

--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
 
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
+    <link rel="stylesheet" href="/bower_components/codemirror/lib/codemirror.css" />
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -45,6 +46,7 @@
     <script src="/bower_components/jquery/dist/jquery.js"></script>
     <script src="/bower_components/mithril/mithril.min.js"></script>
     <script src="/bower_components/lodash/lodash.js"></script>
+    <script src="/bower_components/codemirror/lib/codemirror.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
