JSON linting working on the source editor side.

--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,9 @@
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
 
+    <link rel="stylesheet" href="/bower_components/codemirror/addon/lint/lint.css" />
+    <link rel="stylesheet" href="/bower_components/codemirror/theme/zenburn.css" />
+
     <!-- build:js scripts/vendor/modernizr.js -->
     <script src="/bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
@@ -49,6 +52,11 @@
     <script src="/bower_components/codemirror/lib/codemirror.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
+
+    <script src="/bower_components/jsonlint/lib/jsonlint.js"></script>
+    <script src="/bower_components/codemirror/mode/javascript/javascript.js"></script>
+    <script src="/bower_components/codemirror/addon/lint/lint.js"></script>
+    <script src="/bower_components/codemirror/addon/lint/json-lint.js"></script>
 
     <!-- build:js scripts/plugins.js -->
     <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/affix.js"></script>
