Shifting to D3 for the gui.

--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="/bower_components/codemirror/lib/codemirror.css" />
+    <link rel="stylesheet" href="/bower_components/opentip/css/opentip.css" />
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -46,11 +47,14 @@
 
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
-    <script src="/bower_components/jquery/dist/jquery.js"></script>
+    <script src="/bower_components/jquery/jquery.js"></script>
     <script src="/bower_components/mithril/mithril.min.js"></script>
     <script src="/bower_components/lodash/lodash.js"></script>
     <script src="/bower_components/codemirror/lib/codemirror.js"></script>
     <script src="/bower_components/snap.svg/dist/snap.svg-min.js"></script>
+    <script src="/bower_components/opentip/lib/opentip.js"></script>
+    <script src="/bower_components/opentip/lib/adapter-component.js"></script>
+    <script src="/bower_components/d3/d3.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
