--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,7 @@
 
     <link rel="stylesheet" href="/bower_components/codemirror/addon/lint/lint.css" />
     <link rel="stylesheet" href="/bower_components/codemirror/theme/zenburn.css" />
+    <link rel="stylesheet" href="/app/styles/tooltip-box.css" />
 
     <!-- build:js scripts/vendor/modernizr.js -->
     <script src="/bower_components/modernizr/modernizr.js"></script>
