Added div html overlay for the menu, as well as FPS Meter.

--- a/app/pixi/pixitest.html
+++ b/app/pixi/pixitest.html
@@ -5,9 +5,11 @@
     <title></title>
   <link rel="stylesheet" href="style.css">
 </head>
+<div id="overlayMenu">Menu Here</div>
 <body>
 
 <script src="/bower_components/pixi.js/bin/pixi.js"></script>
+<script src="/bower_components/fpsmeter/dist/fpsmeter.min.js"></script>
 <script src="pixi.script.js"></script>
 </body>
 </html>
