--- a/app/index.html
+++ b/app/index.html
@@ -48,14 +48,17 @@
 
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
-    <script src="/bower_components/jquery/jquery.js"></script>
-    <script src="/bower_components/mithril/mithril.min.js"></script>
-    <script src="/bower_components/lodash/lodash.js"></script>
+    <script src="/bower_components/jquery/dist/jquery.js"></script>
     <script src="/bower_components/codemirror/lib/codemirror.js"></script>
-    <script src="/bower_components/snap.svg/dist/snap.svg-min.js"></script>
+    <script src="/bower_components/d3/d3.js"></script>
+    <script src="/bower_components/d3-tip/index.js"></script>
+    <script src="/bower_components/fpsmeter/dist/fpsmeter.js"></script>
+    <script src="/bower_components/lodash/lodash.js"></script>
+    <script src="/bower_components/mithril/mithril.min.js"></script>
     <script src="/bower_components/opentip/lib/opentip.js"></script>
     <script src="/bower_components/opentip/lib/adapter-component.js"></script>
-    <script src="/bower_components/d3/d3.js"></script>
+    <script src="/bower_components/pixi.js/bin/pixi.js"></script>
+    <script src="/bower_components/snap.svg/dist/snap.svg-min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
