Making more changes to integrate pixjs with mithril

--- a/app/index.html
+++ b/app/index.html
@@ -38,25 +38,15 @@
 
     <nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1">
       <div id="code-bar"></div>
-      <!--<h3>Menu</h3>
-      <a href="#">Celery seakale</a>
-      <a href="#">Dulse daikon</a>
-      <a href="#">Zucchini garlic</a>
-      <a href="#">Catsear azuki bean</a>
-      <a href="#">Dandelion bunya</a>
-      <a href="#">Rutabaga</a>-->
     </nav>
     <div class="container">
       <header class="clearfix">
         <nav><button id="showLeft">Show/Hide Left Slide Menu</button></nav>
       </header>
       <div class="main" id="main">
-        <!--<div id="cloudslicer-app"></div>-->
+        <div id="cloudslicer-app"></div>
       </div>
     </div>
-
-    <!-- mitrhil app -->
-    <!--<div id="cloudslicer-app"></div>-->
 
     <script src="/bower_components/classie/classie.js"></script>
     <script>
