Pixijs now integrated into mithril.

--- a/app/index.html
+++ b/app/index.html
@@ -39,15 +39,18 @@
     <nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1">
       <div id="code-bar"></div>
     </nav>
+    <button id="showLeft">Show/Hide Left Slide Menu</button>
+    <div id="cloudslicer-app"></div>
+
+<!--
     <div class="container">
       <header class="clearfix">
-        <nav><button id="showLeft">Show/Hide Left Slide Menu</button></nav>
       </header>
       <div class="main" id="main">
-        <div id="cloudslicer-app"></div>
+
       </div>
     </div>
-
+-->
     <script src="/bower_components/classie/classie.js"></script>
     <script>
       var menuLeft = document.getElementById( 'cbp-spmenu-s1' ),
