Adding the grid and elements to their separate DisplayContainers before adding them to the stage.

--- a/app/index.html
+++ b/app/index.html
@@ -81,7 +81,7 @@
     <script src="/bower_components/mithril/mithril.min.js"></script>
     <script src="/bower_components/opentip/lib/opentip.js"></script>
     <script src="/bower_components/opentip/lib/adapter-component.js"></script>
-    <script src="/bower_components/pixi.js/bin/pixi.js"></script>
+    <script src="/bower_components/pixi.js/bin/pixi.min.js"></script>
     <script src="/bower_components/snap.svg/dist/snap.svg-min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
