--- a/app/index.html
+++ b/app/index.html
@@ -74,15 +74,12 @@
     <!-- bower:js -->
     <script src="/bower_components/jquery/jquery.js"></script>
     <script src="/bower_components/codemirror/lib/codemirror.js"></script>
-    <script src="/bower_components/d3/d3.js"></script>
-    <script src="/bower_components/d3-tip/index.js"></script>
     <script src="/bower_components/fpsmeter/dist/fpsmeter.js"></script>
     <script src="/bower_components/lodash/lodash.js"></script>
     <script src="/bower_components/mithril/mithril.min.js"></script>
-    <script src="/bower_components/opentip/lib/opentip.js"></script>
     <script src="/bower_components/opentip/lib/adapter-component.js"></script>
     <script src="/bower_components/pixi.js/bin/pixi.js"></script>
-    <script src="/bower_components/snap.svg/dist/snap.svg-min.js"></script>
+    <script src="/bower_components/tween.js/src/Tween.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
