--- a/app/index.html
+++ b/app/index.html
@@ -80,6 +80,7 @@
     <script src="/bower_components/opentip/lib/adapter-component.js"></script>
     <script src="/bower_components/pixi.js/bin/pixi.js"></script>
     <script src="/bower_components/tween.js/src/Tween.js"></script>
+    <script src="/bower_components/stats.js/build/stats.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
